--- a/index.html
+++ b/index.html
@@ -1,7 +1,164 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<head>
+	<title>Fizz Bot</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+
+<body class="is-preload">
+	<section id="sidebar">
+		<div class="inner">
+			<nav>
+				<ul>
+					<li><a href="#welcome">Welcome</a></li>
+					<li><a href="#features">Features</a></li>
+					<li><a href="#commands">Commands</a></li>
+				</ul>
+			</nav>
+		</div>
+	</section>
+
+	<div id="wrapper">
+
+		<section id="welcome" class="wrapper style1 fullscreen fade-up">
+			<div class="inner">
+				<h1>Fizz Bot</h1>
+				<p>League of Legends Discord bot which allows you to get updates when users enter or exit games, and access information you would normally have to access in a web browser right from your Discord server.</p>
+				<ul class="actions">
+					<li><a href="https://discord.com/oauth2/authorize?client_id=713795134780604487&scope=bot&permissions=8"
+							class="button scrolly" target="_blank">Add to Server</a></li>
+				</ul>
+			</div>
+		</section>
+
+		<section id="one" class="wrapper style2 spotlights">
+			<section>
+				<div class="content">
+					<div class="inner">
+						<h2>Track Players</h2>
+						<p>Add users to your server's tracked list to get updates when players enter or exit games! See
+							what champs are being played, gamemode, and more when players go into games.</p>
+					</div>
+				</div>
+			</section>
+			<section>
+				<div class="content">
+					<div class="inner">
+						<h2>Player Information</h2>
+						<p>Eliminates need to open stats websites. Check player rank, match history (coming soon), and
+							more with commands from your discord server.</p>
+					</div>
+				</div>
+			</section>
+			<section>
+				<div class="content">
+					<div class="inner">
+						<h2>More</h2>
+						<p>There are more features and commands being worked on every week.</p>
+					</div>
+				</div>
+			</section>
+		</section>
+
+		<section id="features" class="wrapper style3 fade-up">
+			<div class="inner">
+				<h2>Commands</h2>
+				<p>You can find the list of commands and their function here. The command prefix for the bot is '%'.</p>
+				<div class="features">
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>%help</h3>
+						<p>DMs you the list of commands that are implemented. You can do %help [command name] for more information on a specific command.</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>%add</h3>
+						<p>Adds a user to your server's list of tracked users. Currently, only NA players are supported, with multiregion support coming soon. %add [summoner name]</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>%clear</h3>
+						<p>Clears the users that are being tracked for your server.</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>%ingame</h3>
+						<p>Check who is playing right now.</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>%list</h3>
+						<p>Sends the list of all tracked users for your server, along with the level</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>%opgg</h3>
+						<p>Links to a player's op.gg. %opgg [summoner name]</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>%rank</h3>
+						<p>Checks a player's rank. %rank [summoner name]</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>%remove</h3>
+						<p>Removes a player from the tracked list. %remove [summoner name]</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>%setchannel</h3>
+						<p>Sets the current channel to have player updates pushed to it.</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-link"></span>
+						<h3>Note on Embeds</h3>
+						<p>You can click on the title to go to the user's op.gg. Exit game info will be implemented soon.</p>
+					</section>
+				</div>
+				<ul class="actions">
+					<li><a href="https://discord.com/oauth2/authorize?client_id=713795134780604487&scope=bot&permissions=8"
+							class="button scrolly" target="_blank">Add to Server</a></li>
+				</ul>
+			</div>
+		</section>
+
+		<section id="commands" class="wrapper style1 fade-up">
+			<div class="inner">
+				<h2>Contact</h2>
+				<p>Currently, Fizz Bot is in it's early stages, and there are still many features to be added. If you want to suggest features, report a bug, or anything else, add Meawa#9113 on Discord.</p>
+			</div>
+		</section>
+
+	</div>
+
+	<footer id="footer" class="wrapper style1-alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy;Bot made by Meawa. All rights reserved.</li>
+				<li>Design: HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
+
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
 </body>
+
 </html>
