--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 		</section>
 
-		<section id="one" class="wrapper style2 spotlights">
+		<section id="features" class="wrapper style2 spotlights">
 			<section>
 				<div class="content">
 					<div class="inner">
@@ -65,7 +65,7 @@
 			</section>
 		</section>
 
-		<section id="features" class="wrapper style3 fade-up">
+		<section id="commands" class="wrapper style3 fade-up">
 			<div class="inner">
 				<h2>Commands</h2>
 				<p>You can find the list of commands and their function here. The command prefix for the bot is '%'.</p>
@@ -128,7 +128,7 @@
 			</div>
 		</section>
 
-		<section id="commands" class="wrapper style1 fade-up">
+		<section class="wrapper style1 fade-up">
 			<div class="inner">
 				<h2>Contact</h2>
 				<p>Currently, Fizz Bot is in it's early stages, and there are still many features to be added. If you want to suggest features, report a bug, or anything else, add Meawa#9113 on Discord.</p>
