--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		<section class="wrapper style1 fade-up">
 			<div class="inner">
 				<h2>Contact</h2>
-				<p>Currently, Fizz Bot is in it's early stages, and there are still many features to be added. If you want to suggest features, report a bug, or anything else, add Meawa#9113 on Discord.</p>
+				<p>Currently, Fizz Bot is in its early stages, and there are still many features to be added. If you want to suggest features, report a bug, or anything else, add Meawa#9113 on Discord.</p>
 			</div>
 		</section>
 
