--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="inner">
 			<nav>
 				<ul>
-					<li><a href="#welcome">Welcome</a></li>
+					<li><a href="#intro">Welcome</a></li>
 					<li><a href="#features">Features</a></li>
 					<li><a href="#commands">Commands</a></li>
 				</ul>
@@ -25,7 +25,7 @@
 
 	<div id="wrapper">
 
-		<section id="welcome" class="wrapper style1 fullscreen fade-up">
+		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1>Fizz Bot</h1>
 				<p>League of Legends Discord bot which allows you to get updates when users enter or exit games, and access information you would normally have to access in a web browser right from your Discord server.</p>
