--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 					<li><a href="#intro">Welcome</a></li>
 					<li><a href="#features">Features</a></li>
 					<li><a href="#commands">Commands</a></li>
+					<!-- <li><a href="./settings.html">Control</a></li> -->
 				</ul>
 			</nav>
 		</div>
@@ -27,6 +28,7 @@
 
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
+				<img src="images/620b156518cb2eed66ba6464a6663d46.png" style="height:150px;width:auto"></img>
 				<h1>Fizz Bot</h1>
 				<p>League of Legends Discord bot which allows you to get updates when users enter or exit games, and access information you would normally have to access in a web browser right from your Discord server.</p>
 				<ul class="actions">
@@ -38,7 +40,7 @@
 
 		<section id="features" class="wrapper style2 spotlights">
 			<section>
-				<div class="content">
+				<a href="#" class="image"><img src="images/204e953a756a43e1934c92754baa405e.jpeg" alt="" data-position="center center" /></a>				<div class="content">
 					<div class="inner">
 						<h2>Track Players</h2>
 						<p>Add users to your server's tracked list to get updates when players enter or exit games! See
@@ -47,6 +49,7 @@
 				</div>
 			</section>
 			<section>
+				<a href="#" class="image"><img src="images/d8ef62e72c304d06aa9bfd8bb418572b.jpeg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Player Information</h2>
@@ -56,6 +59,7 @@
 				</div>
 			</section>
 			<section>
+				<a href="#" class="image"><img src="images/c68f24c3d5ae4a2ab959e3679126dad0.jpeg" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>More</h2>
@@ -116,9 +120,9 @@
 						<p>Sets the current channel to have player updates pushed to it.</p>
 					</section>
 					<section>
-						<span class="icon solid major fa-link"></span>
-						<h3>Note on Embeds</h3>
-						<p>You can click on the title to go to the user's op.gg. Exit game info will be implemented soon.</p>
+						<span class="icon solid major fa-code"></span>
+						<h3>%updateranks</h3>
+						<p>Retrives and updates ranks for all users on the list (and plays a cute animation GIF).</p>
 					</section>
 				</div>
 				<ul class="actions">
@@ -131,7 +135,7 @@
 		<section class="wrapper style1 fade-up">
 			<div class="inner">
 				<h2>Contact</h2>
-				<p>Currently, Fizz Bot is in its early stages, and there are still many features to be added. If you want to suggest features, report a bug, or anything else, add Meawa#9113 on Discord.</p>
+				<p>Currently, Fizz Bot is in its early stages, and there are still many features to be added. If you want to suggest features, report a bug, or anything else, add Lambent Light#9113 on Discord. Fizz Bot currently only works for NA players, so DM me if you would like to see multi-region support!</p>
 			</div>
 		</section>
 
