--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<li><a href="#features">Features</a></li>
 					<li><a href="#commands">Commands</a></li>
 					<!-- <li><a href="./settings.html">Control</a></li> -->
+					<li><a href="https://discord.gg/VpbM6gvW2c">Join Support Server</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -136,6 +137,7 @@
 			<div class="inner">
 				<h2>Contact</h2>
 				<p>Currently, Fizz Bot is in its early stages, and there are still many features to be added. If you want to suggest features, report a bug, or anything else, add Lambent Light#9113 on Discord. Fizz Bot currently only works for NA players, so DM me if you would like to see multi-region support!</p>
+				<p>If you would like, join the <a href="https://discord.gg/VpbM6gvW2c">Discord Server</a></p>
 			</div>
 		</section>
 
