--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<li><a href="#features">Features</a></li>
 					<li><a href="#commands">Commands</a></li>
 					<!-- <li><a href="./settings.html">Control</a></li> -->
-					<li><a href="https://discord.gg/VpbM6gvW2c">Join Support Server</a></li>
+					<!-- <li><a href="https://discord.gg/VpbM6gvW2c">Join Support Server</a></li> -->
 				</ul>
 			</nav>
 		</div>
