--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<h1>Fizz Bot</h1>
 				<p>League of Legends Discord bot which allows you to get updates when users enter or exit games, and access information you would normally have to access in a web browser right from your Discord server.</p>
 				<ul class="actions">
-					<li><a href="https://discord.com/oauth2/authorize?client_id=713795134780604487&scope=bot&permissions=268774464"
+					<li><a href="https://discord.com/oauth2/authorize?client_id=713795134780604487&scope=bot&permissions=330816"
 							class="button scrolly" target="_blank">Add to Server</a></li>
 				</ul>
 			</div>
@@ -127,7 +127,7 @@
 					</section>
 				</div>
 				<ul class="actions">
-					<li><a href="https://discord.com/oauth2/authorize?client_id=713795134780604487&scope=bot&permissions=2268774464"
+					<li><a href="https://discord.com/oauth2/authorize?client_id=713795134780604487&scope=bot&permissions=330816"
 							class="button scrolly" target="_blank">Add to Server</a></li>
 				</ul>
 			</div>
