--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
 </head>
 
 <body class="is-preload">
@@ -146,7 +147,7 @@
 				<h2>Contact</h2>
 				<p>Currently, Fizz Bot is in its early stages, and there are still many features to be added. If you
 					want to suggest features, report a bug, or anything else, add Lambent Light#9113 on Discord. Fizz
-					Bot currently only works for NA players, so DM me if you would like to see multi-region support!</p>
+					Bot currently supports all regions.</p>
 				<p>If you would like, join the <a href="https://discord.gg/VpbM6gvW2c">Discord Server</a></p>
 			</div>
 		</section>
